Products Catalog CRUD
Updated Readme

extends tosa api specification

implement ioc containers in test

include launch.json to enable vs code debuging

tso config extended to include authentication module and enable @Security decorator

database indexes for better performance

json schema models implemented in mongo collections
