# docs/swagger.json
@@ -52,6 +52,49 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"ValidationErrorDetails": {
+				"properties": {},
+				"type": "object",
+				"additionalProperties": {
+					"properties": {
+						"message": {}
+					},
+					"required": [
+						"message"
+					],
+					"type": "object"
+				}
+			},
+			"ValidateError": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"message": {
+						"type": "string",
+						"default": ""
+					},
+					"stack": {
+						"type": "string"
+					},
+					"status": {
+						"type": "number",
+						"format": "double",
+						"default": 400
+					},
+					"details": {
+						"$ref": "#/components/schemas/ValidationErrorDetails"
+					}
+				},
+				"required": [
+					"name",
+					"message",
+					"status",
+					"details"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -71,7 +114,7 @@
 				"operationId": "ListProducts",
 				"responses": {
 					"200": {
-						"description": "Ok",
+						"description": "",
 						"content": {
 							"application/json": {
 								"schema": {
@@ -87,6 +130,9 @@
 										"products"
 									],
 									"type": "object"
+								},
+								"examples": {
+									"Example 1": {}
 								}
 							}
 						}
@@ -96,7 +142,27 @@
 					"Get"
 				],
 				"security": [],
-				"parameters": []
+				"parameters": [
+					{
+						"in": "query",
+						"name": "offset",
+						"required": false,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						},
+						"example": 0
+					},
+					{
+						"in": "query",
+						"name": "limit",
+						"required": false,
+						"schema": {
+							"type": "string"
+						},
+						"example": 20
+					}
+				]
 			},
 			"post": {
 				"operationId": "InsertProducts",
@@ -106,6 +172,45 @@
 						"content": {
 							"application/json": {
 								"schema": {}
+							}
+						}
+					},
+					"422": {
+						"description": "Validation Failed",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ValidateError"
+								},
+								"examples": {
+									"Example 1": {
+										"value": {
+											"message": "Validation failed",
+											"name": "Product Schema Validation Failed",
+											"status": 422,
+											"details": {
+												"body.$0.name": {
+													"message": "'name' is required"
+												},
+												"body.$0.description": {
+													"message": "'description' is required"
+												},
+												"body.$0.vendor": {
+													"message": "'vendor' is required"
+												},
+												"body.$0.image": {
+													"message": "'image' is required"
+												},
+												"body.$0.price": {
+													"message": "'price' is required"
+												},
+												"body.$0.categories": {
+													"message": "'categories' is required"
+												}
+											}
+										}
+									}
+								}
 							}
 						}
 					}
@@ -149,7 +254,17 @@
 					"Get"
 				],
 				"security": [],
-				"parameters": []
+				"parameters": [
+					{
+						"in": "path",
+						"name": "productID",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
 			},
 			"put": {
 				"operationId": "UpdateProduct",
